# doli-client-api-rs

./: .gitignore  Cargo.toml  README.md
src/: client.rs  config.rs  customer.rs  error.rs  lib.rs  order.rs  product.rs
